Thu Jul 24 19:29:36 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSGGGame): better support for resignations
	in SGG files.

Wed Jul 22 16:34:15 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* backgammon.h gnubg.c gtkgame.c html.c latex.c postscript.c
	  text.c sgf.c play.c analysis.c import.c export.c

	  doubles and corresponding take moverecords have the same
	  analysis and evalcontext
	
Wed Jul 22 14:17:18 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gtkcube.c - allow extending cube decision rollouts

Tue Jul 22 14:29:09 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* set.c - add decimal places to j.s.d. displayed value
	* rollout.c - force rollouts of cube decisions to use cubeful
	  rollout contexts

Tue Jul 22 10:41:36 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* html.c (printStatTableMissed): don't print '(-0.000 ( -0.000%))'
	in HTML output. 

Mon Jul 21 23:05:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (write_points): fix bug when writing boards
	for turn=-1.
	(reported by Dean Gay)

Mon Jul 21 22:13:49 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLMatchInfo): only print non-empty values.

Mon Jul 21 21:17:30 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): fix normalisation bug.

Mon 20 Jul 17:04:44 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - more re-arrangement of aspect ratio
	* gtkoptions.c - set output digits reset old value
	
Mon Jul 21 15:59:43 2003  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c gtkgame.h gtkmet.c: update filename of current MET
	  in options after loading a new one

Mon 20 Jul 13:30:41 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - quick hackery changing some hboxes to vboxes
	  to change the aspect ration of the rollout settings main page
	
Mon 20 Jul 11:32:04 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - re-instate fix for initial position dice (lost 